--- a/client/src/Layout.css
+++ b/client/src/Layout.css
@@ -10,12 +10,29 @@
     margin-right: 20px;
     min-height: 100%;
     padding: 10px;
-    width: 300px;
+    /* width: 300px; */
+}
+/* .collapsed-sidebar{
+    background-color: #005555;
+    border-radius: 5px;
+    box-shadow: 0 0 2px gray;
+    margin-right: 20px;
+    min-height: 100%;
+    padding: 10px;
+    width: 60px;
+} */
+.sidebar-header{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    
 }
 .content{
     width: 100%;
     height: 100%;
 }
+
 .header{
     background-color: #fff;
     border-radius: 5px;
@@ -23,10 +40,64 @@
     margin-bottom: 20px;
     height: 10vh;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
 .body{
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 2px gray;
     height: 82vh;
+    padding: 15px;
 }
+.menu{
+    margin-top: 100px;
+    padding: 0 10px;
+}
+.menu-item{
+    margin-top: 30px;
+
+}
+.menu-item a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+
+}
+.menu-item a:hover{
+    color: orange;
+    text-decoration: none;
+    font-size: 18px;
+    background-color: #004444;
+    border-radius: 5px;
+    padding: 5px;
+}
+/* .menu-item:hover{
+    color: orange;
+    text-decoration: none;
+    font-size: 18px;
+    background-color: #004444;
+    border-radius: 5px;
+    padding: 5px;
+} */
+.menu-item i{
+    margin: 0 15px;
+    color: #fff;
+    font-size: 18px;
+}
+
+@media screen and (max-width: 768px){
+   
+    .menu{
+        padding: 0 10px;
+    }
+    .sidebar-header{
+        font-size: 10px;
+    }
+   
+    
+   
+}
+    
