--- a/client/src/Layout.css
+++ b/client/src/Layout.css
@@ -4,13 +4,19 @@
 
 }
 .sidebar{
-    background-color: #005555;
+    background-color: #031D44;
     border-radius: 5px;
     box-shadow: 0 0 2px gray;
     margin-right: 20px;
     min-height: 100%;
     padding: 10px;
     /* width: 300px; */
+}
+.role{
+    color: #fff;
+    font-size: 14px;
+    margin-top: -10px;
+   
 }
 /* .collapsed-sidebar{
     background-color: #005555;
@@ -22,7 +28,7 @@
     width: 60px;
 } */
 .sidebar-header{
-    color: white;
+    color: orange;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -64,15 +70,14 @@
     color: #fff;
     text-decoration: none;
     font-size: 18px;
+    
 
 }
 .menu-item a:hover{
     color: orange;
     text-decoration: none;
     font-size: 18px;
-    background-color: #004444;
     border-radius: 5px;
-    padding: 5px;
 }
 /* .menu-item:hover{
     color: orange;
